After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 770557 - clutter/evdev: Fix absolute pointer motion events
clutter/evdev: Fix absolute pointer motion events
Status: RESOLVED FIXED
Product: mutter
Classification: Core
Component: wayland
unspecified
Other All
: Normal normal
: ---
Assigned To: mutter-maint
mutter-maint
Depends on:
Blocks:
 
 
Reported: 2016-08-29 15:12 UTC by Jonas Ådahl
Modified: 2016-08-30 07:51 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
clutter/evdev: Fix absolute pointer motion events (1.15 KB, patch)
2016-08-29 15:12 UTC, Jonas Ådahl
committed Details | Review

Description Jonas Ådahl 2016-08-29 15:12:32 UTC
Fixes https://bugzilla.redhat.com/show_bug.cgi?id=1369492
Comment 1 Jonas Ådahl 2016-08-29 15:12:39 UTC
Created attachment 334378 [details] [review]
clutter/evdev: Fix absolute pointer motion events

Absolute pointer events sent the X coordinate as both X and Y. This
caused input issues when running as a virtual machine if the virtual
machine used absolute pointer events instead of emulating a regular
mouse type (i.e. relative) device.
Comment 2 Rui Matos 2016-08-29 15:28:32 UTC
Review of attachment 334378 [details] [review]:

Not really a problem, but the commit message makes it sound like this is specific to virtual machines, you might want to rewrite that, or not, up to you.
Comment 3 Jonas Ådahl 2016-08-30 07:51:54 UTC
Attachment 334378 [details] pushed as 01edf10 - clutter/evdev: Fix absolute pointer motion events